# afcharts-py

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  af_python_test.py  pyproject.toml  requirements.txt  test_readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  linting.yml  pr_title.yml  publish.yml  test.yml
docs/: pytest_intro.md
docs/cookbook/: 01-getting-started.qmd  01-matplotlib-usage.qmd  03-plotly-usage.qmd  _quarto.yml  getting-started.qmd  index.qmd
docs/cookbook/docs/site_libs/bootstrap/: bootstrap-06194527eb9070bde8619de5c1179a4a.min.css
docs/images/example_charts/: example_charts.ipynb
images/: af_test.mplstyle
src/afcharts/: __init__.py  af_colours.py  afcharts.mplstyle  afcharts.py  instance-matplotlib.py  matplotlib-theme.py  pandas-matplotlib  pio_template.py  theme_af.py
src/afcharts/assets/: af_colours.py  pio_template.py
src/afcharts/config/: af_colours.yaml
src/afcharts/cookbook/: .gitignore  01-matplotlib-usage.qmd  01-matplotlib-usage.quarto_ipynb  02-seaborn-usage.qmd  03-plotly-usage.qmd  04-colour-palettes.qmd  05-chart-customisation.qmd  README.qmd  _quarto.yml  custom.scss  getting-started.qmd  index.qmd  styles.css
src/afcharts/stylelib/: mhclg.mplstyle
src/afcharts_py/: theme_af.py
src/afcharts_py/af_plotly/: charts.py
src/afcharts_py/assets/: af_colours.py  pio_template.py
src/afcharts_py/cookbook/: .gitignore  01-matplotlib-usage.qmd  02-seaborn-usage.qmd  03-plotly-usage.qmd  04-colour-palettes.qmd  README.qmd  _quarto.yml  getting-started.qmd  index.qmd
src/afcharts_py/cookbook/_book/: 01-matplotlib-usage.html  02-seaborn-usage.html  03-plotly-usage.html  04-colour-palettes.html  getting-started.html  index.html  search.json
stylesheet/: afcharts.mplstyle
test_data/: column_chart.csv  grouped_bar_chart.csv  line_area_chart.csv  line_chart.csv  pie_chart.csv  stacked_categorical_bar_chart.csv  waterfall_chart.csv
tests/: af_colours_categorical_duo_output_test.py  af_colours_list_length_test.py  af_colours_sequential_test.py  af_colours_value_errors_test.py  conftest.py  matplotlib_bar_test.py  plotly_bar_test.py  plotly_line_test.py  plotly_scatter_test.py
workflows/: black_formating.yml
